--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: "[go dep] "
+      prefix: "[gomod] "
 
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -17,4 +17,4 @@ updates:
       all-actions:
         patterns: [ "*" ]
     commit-message:
-      prefix: "[gha dep] "
+      prefix: "[actions] "
