--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,15 +3,29 @@ name: Go CI
 on: push
 
 jobs:
+  go-versions:
+    name: Determine Go versions
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.versions.outputs.matrix }}
+      latest: ${{ steps.versions.outputs.latest }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Get Go versions
+        id: versions
+        uses: arnested/go-version-action@v1
+
   check:
     name: Go checks
     runs-on: ubuntu-latest
+    needs: go-versions
 
     steps:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24'
+          go-version: ${{ needs.go-versions.outputs.latest }}
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -46,10 +60,11 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.22.x, 1.23.x, 1.24.x]
+        go-version: ${{ fromJSON(needs.go-versions.outputs.matrix) }}
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
+    needs: go-versions
 
     steps:
       - name: Set up Go
