--- a/examples/rest-api/survey.yaml
+++ b/examples/rest-api/survey.yaml
@@ -25,7 +25,7 @@ questions:
       - "Maybe"
       - "Probably Not"
       - "Definitely Not"
-    condition: 'answers["satisfaction"] <= 2'
+    condition: 'answers["satisfaction"] in [1,2]'
 
   - id: "improvement_areas"
     text: "What areas do you think we need to improve the most?"
@@ -45,7 +45,7 @@ questions:
       - "Integration Options"
       - "Automation Tools"
       - "Collaboration Features"
-    condition: 'answers["satisfaction"] <= 3 and answers["improvement_areas"] == 1'
+    condition: 'answers["improvement_areas"] == 1'
 
   - id: "support_channel"
     text: "What is your preferred way to get customer support?"
@@ -84,7 +84,7 @@ questions:
       - "Moderate Improvement"
       - "Minor Improvement"
       - "No Noticeable Impact"
-    condition: 'answers["usage_frequency"] <= 3'
+    condition: 'answers["usage_frequency"] in 1..3'
 
   - id: "alternative_consideration"
     text: "Have you considered switching to a competitor?"
@@ -104,4 +104,4 @@ questions:
       - "Fair Pricing"
       - "Easy to Use"
       - "Integration Dependencies"
-    condition: 'answers["alternative_consideration"] <= 2'
+    condition: 'answers["alternative_consideration"] in [1,2]'
