Make dependencies explicit & validate the config structure
Up until now, questionnaire used implicit dependencies through conditions:
Hard to analyze: Need to parse conditions to find dependencies
Error-prone: Typos in question IDs within conditions aren't caught early
Cycle detection: Hard to detect circular dependencies

--- a/examples/cli/tech.yaml
+++ b/examples/cli/tech.yaml
@@ -10,6 +10,7 @@ questions:
 
   - id: "tech_stack"
     text: "How would you define your main skill?"
+    depends_on: ["career_stage"]
     condition: 'answers["career_stage"] == 2 or answers["career_stage"] == 3'
     answers:
       - "Frontend"
@@ -19,6 +20,7 @@ questions:
 
   - id: "company_size"
     text: "What kind of company are you working on?"
+    depends_on: ["career_stage"]
     condition: 'answers["career_stage"] >= 2'
     answers:
       - "Startup"
