--- a/examples/rest-api/survey.yaml
+++ b/examples/rest-api/survey.yaml
@@ -25,6 +25,7 @@ questions:
       - "Maybe"
       - "Probably Not"
       - "Definitely Not"
+    depends_on: ["satisfaction"]
     condition: 'answers["satisfaction"] in [1,2]'
 
   - id: "improvement_areas"
@@ -35,6 +36,7 @@ questions:
       - "Pricing"
       - "User Experience"
       - "Documentation"
+    depends_on: ["satisfaction"]
     condition: 'answers["satisfaction"] >= 3'
 
   - id: "feature_priority"
@@ -45,6 +47,7 @@ questions:
       - "Integration Options"
       - "Automation Tools"
       - "Collaboration Features"
+    depends_on: ["improvement_areas"]
     condition: 'answers["improvement_areas"] == 1'
 
   - id: "support_channel"
@@ -55,6 +58,7 @@ questions:
       - "Phone Support"
       - "Self-Service Portal"
       - "Video Call"
+    depends_on: ["improvement_areas", "support_quality"]
     condition: 'answers["improvement_areas"] == 2 or answers["support_quality"] >= 3'
 
   - id: "price_perception"
@@ -65,6 +69,7 @@ questions:
       - "Slightly Expensive"
       - "Too Expensive"
       - "Way Too Expensive"
+    depends_on: ["improvement_areas"]
     condition: 'answers["improvement_areas"] == 3'
 
   - id: "usage_frequency"
@@ -84,6 +89,7 @@ questions:
       - "Moderate Improvement"
       - "Minor Improvement"
       - "No Noticeable Impact"
+    depends_on: ["usage_frequency"]
     condition: 'answers["usage_frequency"] in 1..3'
 
   - id: "alternative_consideration"
@@ -94,6 +100,7 @@ questions:
       - "Sometimes"
       - "Often"
       - "Actively Looking"
+    depends_on: ["satisfaction", "recommend"]
     condition: 'answers["satisfaction"] >= 4 or answers["recommend"] >= 4'
 
   - id: "loyalty_factor"
@@ -104,4 +111,5 @@ questions:
       - "Fair Pricing"
       - "Easy to Use"
       - "Integration Dependencies"
+    depends_on: ["alternative_consideration"]
     condition: 'answers["alternative_consideration"] in [1,2]'
